<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Outlinedata">
    <RelativeLayout
        android:padding="@dimen/spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/main_image_content"
            android:layout_alignParentStart="true"
            android:id="@+id/over_view_poster"
            android:layout_width="@dimen/imagewidth"
            android:layout_height="@dimen/imageheight"
            android:layout_alignParentLeft="true" />
        <TextView
            android:layout_marginStart="@dimen/imagewidth"
            android:layout_alignParentStart="true"
            android:id="@+id/over_view_rating_label"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/rating_label"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/main_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/imagewidth"
            android:layout_alignParentRight="true" />
        <TextView
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginStart="@dimen/imagewidth"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/sub_text_size"
            android:layout_below="@id/over_view_rating_label"
            android:id="@+id/over_view_rating_tv"
            tools:text="@string/rating_label"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/imagewidth" />
        <TextView
            android:layout_marginTop="@dimen/spacing"
            android:layout_below="@id/over_view_rating_tv"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/main_text_size"
            android:text="@string/release_date"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/imagewidth"
            android:layout_alignParentStart="true"
            android:id="@+id/over_view_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/imagewidth" />
        <TextView
            android:layout_marginTop="@dimen/spacing"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/imagewidth"
            android:layout_below="@id/over_view_release_date_label"
            android:id="@+id/over_view_release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/imagewidth"
            tools:text="@string/release_date"
            android:textSize="@dimen/sub_text_size"
            android:gravity="center"/>
        <TextView
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/imagewidth"
            android:id="@+id/over_view_vote_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            android:layout_below="@id/over_view_release_date_tv"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/vote_count"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/imagewidth" />
        <TextView
            android:layout_below="@id/over_view_vote_count_label"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:id="@+id/over_view_vote_count_tv"
            tools:text="@string/vote_count"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginStart="@dimen/imagewidth"
            android:textSize="@dimen/sub_text_size"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/imagewidth" />
        <TextView
            android:id="@+id/over_view_favorites_label"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/imagewidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size"
            android:text="@string/favorites"
            android:layout_below="@id/over_view_vote_count_tv"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/spacing"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/imagewidth" />
        <ImageView
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginStart="@dimen/imagewidth"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/favorites_display"
            android:layout_below="@id/over_view_favorites_label"
            android:id="@+id/over_view_favorites_image"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:clickable="true"
            android:onClick="change"
            android:src="@drawable/ic_favorite_black_24dp"
            android:layout_marginLeft="@dimen/imagewidth"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true" />
        <TextView
            android:layout_marginTop="@dimen/spacing"
            android:text="@string/over_view"
            android:textStyle="bold"
            android:textSize="@dimen/main_text_size"
            android:layout_below="@id/over_view_poster"
            android:id="@+id/over_view_overView_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            tools:text="@string/over_view"
            android:layout_marginTop="@dimen/spacing"
            android:textSize="@dimen/sub_text_size"
            android:layout_below="@id/over_view_overView_label"
            android:id="@+id/over_view_overView_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/over_view_youtube_label"
            android:layout_below="@id/over_view_overView_tv"
            android:textSize="@dimen/main_text_size"
            android:textStyle="bold"
            android:text="@string/trailers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/over_view_recyclerView"
            android:layout_below="@id/over_view_youtube_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_below="@id/over_view_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:onClick="openReview"
            android:text="@string/reviews"
            android:textSize="@dimen/main_text_size"/>
    </RelativeLayout>

</ScrollView>